[tool.poetry]
name = "pubmed-paper-fetcher"
version = "0.1.0"
description = "CLI tool to fetch PubMed papers with non-academic authors"
authors = ["Your Name"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.0"
pandas = "^2.2.2"
typer = "^0.12.3"

[tool.poetry.scripts]
get-papers-list = "pubmed_paper_fetcher.main:main"

[[tool.poetry.packages]]
include = "pubmed_paper_fetcher"